Bug 223681 - [mozTXTToHTMLConv] fails for links with ipv6 addresses. r=ben.bucksch, sr=cbiesinger